--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,14 @@
   {% include head.html %}
 
   <body>
-    <img class="bck_img" src="/assets/images/gsheroblur-720.jpg">
-    <main class="main" aria-label="Content">
-      <div class="main__head">
-        <div id="canvas__wrapper"></div>
-        <div class="title__logo--wrapper buzz_wrapper">
-          <div class="text">
-            <span>grayscale</span>
-          </div>
-        </div>
-      </div>
-      <div class="main__body">
-         {{ content }}
+    {% include header.html %}
+    
+    <main>
+      <div class="content-wrapper">
+        {{ content }}
       </div>
     </main>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/glitch.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 
 </html>
