--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="index-header">
 	<div class="site-title--scroll">Grayscale</div>
 	<div class="site-title">Grayscale // Dublin</div>
 	<div class="image-effect-wrapper">
@@ -6,9 +6,6 @@
 	</div>
 	<div class="site-intro">
 		<p>Grayscale: a not-for-profit arts collective</p>
-		<!--<p>The most exciting contemporary music and visual art.</p>
-		<span class="ampersand">&</span>
-		<p>The most beautiful spaces in Dublin.</p>-->
 	</div>
 	{% include primary-menu.html %}
 </header>
