--- a/_includes/primary-menu.html
+++ b/_includes/primary-menu.html
@@ -1,19 +1,13 @@
 <nav class="primary-menu-wrapper">
 	<ul class="primary-menu">
 		<li class="primary-menu__item">
-			<a href="/">Events</a>
+			<a href="/events">Events</a>
 		</li>
 		<li class="primary-menu__item">
-			<a href="/">Interviews</a>
+			<a href="/interviews">Interviews</a>
 		</li>
 		<li class="primary-menu__item">
-			<a href="/">Mixes</a>
-		</li>
-		<li class="primary-menu__item">
-			<a href="/">Newsletter</a>
-		</li>
-		<li class="primary-menu__item">
-			<a href="/">Contact</a>
+			<a href="/contact">Contact</a>
 		</li>
 	</ul>
 </nav>
