--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,4 +1,6 @@
 <header class="post-header">
-	<div class="site-title">Grayscale // Dublin</div>
+	<div class="site-title">
+		<a href="/">Grayscale // Dublin</a>
+	</div>
 	{% include primary-menu.html %}
 </header>
