--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header class="index-header">
 	<div class="site-title--scroll">Grayscale</div>
-	<div class="site-title">Grayscale // Dublin</div>
+	<div class="site-title">
+		<a href="/">Grayscale // Dublin</a>
+	</div>
 	<div class="image-effect-wrapper">
 		<canvas id="c"></canvas>
 	</div>
