--- a/_layouts/cat-list.html
+++ b/_layouts/cat-list.html
@@ -7,17 +7,15 @@
 	{% include post-header.html %}
 
 	<main>
-		<h2>{{page.category}}</h2>
 		<div class="content-wrapper">
-			 {% for post in site.categories.[page.category] %}
+			{% for post in site.categories[page.category] %}
 			<div class="post post_in_list">
-				<a href="{{post.permalink}}">
-					{% if post.featured_image %}
-					<img class="post-index-image" src="{{ post.featured_image }}" /> {% endif %}
-					<h2 class="post-index-title">
-						{{ post.title }}
-					</h2>
-				</a>
+				{% if post.featured_image %}
+				<a class="no-bck" href="{{post.permalink}}">
+					<img class="post-index-image" src="{{ post.featured_image }}" /> </a>{% endif %}
+				<h2 class="post-index-title">
+					<a href="{{post.permalink}}">{{ post.title }}</a>
+				</h2>
 			</div>
 			{% endfor %}
 		</div>
