--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta name="theme-color" content="#09080c">
   <script>
     (function (d) {
       var config = {
